feat: add course url to create and edit forms for badges

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1120,6 +1120,26 @@
 						</div>
 					}
 
+					<!-- Link to course offering -->
+					<section class="section tw-text-oebblack tw-mt-6">
+						<h2 hlmH2 class="!tw-text-oebblack tw-pb-4">
+							{{ 'CreateBadge.linkToCourse' | translate }}
+						</h2>
+						<div class="tw-w-full tw-flex tw-gap-4 tw-text-oebblack tw-text-lg tw-mt-4 tw-mb-4">
+							<oeb-input
+								id="course-url"
+								class="tw-w-full"
+								[control]="badgeClassForm.rawControlMap.courseUrl"
+								[noTopMargin]="true"
+								[label]="'CreateBadge.websiteUrl' | translate"
+								[placeholder]="'https://'"
+								[urlField]="true"
+								[fieldType]="'url'"
+								errorMessage="{{ 'Issuer.enterURL' | translate }}"
+							/>
+						</div>
+					</section>
+
 					<!-- Expiration -->
 					<section class="section tw-text-oebblack tw-mt-6">
 						<h2 hlmH2 class="!tw-text-oebblack tw-pb-4">
