feat: add course url fields to single and bulk award pages

--- a/src/app/issuer/components/badgeclass-issue-bulk-award/badgeclass-issue-bulk-award.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award/badgeclass-issue-bulk-award.component.html
@@ -33,6 +33,7 @@
 					[transformedImportData]="transformedImportData"
 					(updateStateEmitter)="updateViewState($event)"
 					[badgeSlug]="badgeSlug"
+					[badgeClass]="badgeClass"
 					[issuerSlug]="issuerSlug"
 				>
 				</badgeclass-issue-bulk-award-confirmation>
