feat: add course url for qr codes

--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -60,8 +60,9 @@
 						[showEvidence]="false"
 						[showLocation]="true"
 						[showCourseDate]="true"
-					>
-					</oeb-optional-details>
+						[showCourseUrl]="true"
+						[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null"
+					/>
 				</div>
 
 				<!-- Notifications Section -->
