--- a/src/app/issuer/components/optional-details/optional-details.component.html
+++ b/src/app/issuer/components/optional-details/optional-details.component.html
@@ -54,7 +54,7 @@
 				<oeb-separator [separatorStyle]="'tw-block tw-my-4 !tw-border !tw-border-dashed tw-border-darkgrey'" />
 			}
 
-			<!-- Location Item -->
+			<!-- course url Item -->
 			@if (showCourseUrl() && hasControl('courseUrl')) {
 				<li>
 					<ng-template #courseUrlTrigger>
