--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -57,9 +57,11 @@
 					<oeb-optional-details
 						[parentForm]="qrForm"
 						[showExpiration]="true"
-						[showEvidence]="false"
+						[showEvidence]="true"
 						[showLocation]="true"
 						[showCourseDate]="true"
+						(addEvidenceEvent)="addEvidence()"
+						(removeEvidenceEvent)="removeEvidence($event)"
 					>
 					</oeb-optional-details>
 				</div>
