Allow creators to edit networks (#1841)
* feat: add ability to edit network information for creators

* refactor: rm log

* refactor: use networkSlug instead of issuerSlug

* fix: pass network slug to edit form

* refactor: remove unused constructor

* refactor: rename inputs and use network model for clarity

* fix: adjust font style on network dashboard

--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -4,9 +4,14 @@
 			<bg-breadcrumbs [linkentries]="crumbs"> </bg-breadcrumbs>
 		</div>
 		@if (activeTab === 'overview') {
-			<h1 hlmH1 class="tw-text-purple tw-font-black tw-mt-20 tw-pb-14">
-				{{ 'Network.welcomeDashboard' | translate }}
-			</h1>
+			<div class="tw-flex tw-mt-20">
+				<h1 hlmH1 class="tw-text-purple tw-font-black tw-pb-14">
+					{{ 'Network.welcomeDashboard' | translate }}
+				</h1>
+				@if (role === 'creator') {
+					<oeb-button [variant]="'secondary'" [text]="'General.edit' | translate" [routerLink]="['./edit']" />
+				}
+			</div>
 		}
 		<ng-template [bgAwaitPromises]="[networkLoaded]">
 			<section
@@ -17,8 +22,8 @@
 					<img width="70px" [src]="network().image" alt="Network Logo" />
 				</div>
 				<div class="tw-flex tw-flex-col">
-					<span class="tw-font-bold tw-text-3xl tw-text-oebblack">{{ network().name }}</span>
-					<span class="tw-text-oebblack tw-text-lg tw-font-semibold tw-mt-2">
+					<span class="tw-font-bold tw-text-3xl tw-text-oebblack tw-flex-grow">{{ network().name }}</span>
+					<span class="tw-text-oebblack tw-italic tw-flex-grow">
 						{{
 							'Network.yourRole'
 								| translate
