feat: default open only when course url specified and not empty

--- a/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
@@ -97,7 +97,7 @@
 		[showLocation]="true"
 		[showCourseDate]="true"
 		[showCourseUrl]="true"
-		[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null"
+		[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null && badgeInstanceCourseUrl().length > 0"
 	/>
 
 	<div class="oeb-standard-padding-bottom tw-flex tw-flex-col tw-text-end tw-gap-6 tw-mt-6">
