--- a/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
+++ b/src/app/issuer/components/badgeclass-issue/badgeclass-issue.component.html
@@ -102,7 +102,7 @@
 					[showLocation]="true"
 					[showCourseDate]="true"
 					[showCourseUrl]="true"
-					[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null"
+					[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null && badgeInstanceCourseUrl().length > 0"
 				/>
 
 				<span class="tw-text-oebblack tw-mt-10 tw-mb-4 tw-text-right tw-text-lg tw-block">
