--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -61,7 +61,9 @@
 						[showLocation]="true"
 						[showCourseDate]="true"
 						[showCourseUrl]="true"
-						[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null"
+						[courseUrlDefaultOpen]="
+							badgeInstanceCourseUrl() !== null && badgeInstanceCourseUrl().length > 0
+						"
 					/>
 				</div>
 
