--- a/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
+++ b/src/app/issuer/components/edit-qr-form/edit-qr-form.component.html
@@ -60,8 +60,11 @@
 						[showEvidence]="false"
 						[showLocation]="true"
 						[showCourseDate]="true"
-					>
-					</oeb-optional-details>
+						[showCourseUrl]="true"
+						[courseUrlDefaultOpen]="
+							badgeInstanceCourseUrl() !== null && badgeInstanceCourseUrl().length > 0
+						"
+					/>
 				</div>
 
 				<!-- Notifications Section -->
