--- a/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
+++ b/src/app/catalog/components/issuer-catalog/issuer-catalog.component.html
@@ -17,7 +17,6 @@
 
 	<ng-template [showLoader]="true" [bgAwaitPromises]="pageReadyPromise">
 		<section>
-			<!-- Filters -->
 			<div class="tw-flex tw-items-center tw-rounded-lg tw-p-4 tw-bg-[#ECFEED] tw-mb-4">
 				<div
 					class="tw-flex tw-flex-col tw-gap-4 tw-w-full min-[880px]:tw-items-center min-[880px]:tw-justify-between min-[880px]:tw-flex-row"
@@ -30,7 +29,7 @@
 									class="!tw-bg-white tw-w-full tw-border-1 tw-border-purple min-[880px]:tw-w-96 tw-border-solid tw-h-12 tw-rounded-lg tw-p-2"
 									placeholder="{{ 'Issuer.searchInstitutions' | translate }}"
 									[ngModel]="searchQuery()"
-									(ngModelChange)="searchQuery.set($event); resetAndReload()"
+									(ngModelChange)="onSearchQueryChange($event)"
 								/>
 								<ng-icon
 									hlm
@@ -42,6 +41,7 @@
 							<oeb-global-sort-select
 								placeholder="{{ 'Badge.sortBy' | translate }}"
 								class="oeb tw-w-[12rem]"
+								[options]="sortOptions"
 								[control]="sortControl"
 							></oeb-global-sort-select>
 
@@ -71,17 +71,15 @@
 				</div>
 			</div>
 
-			<!-- Grid -->
 			@if (badgesDisplay === 'grid') {
 				<div class="tw-grid sm:tw-grid-cols-issuer tw-gap-6 tw-w-full" [@stagger]>
 					@for (issuer of issuers(); track issuer.slug) {
-						<span>{{ issuer.name }}</span>
-						<!-- <oeb-issuer-card
+						<oeb-issuer-card
 							@appearAnimation
 							[plural]="plural"
 							[issuer]="issuer"
 							(navigate)="navigateToIssuer(issuer)"
-						></oeb-issuer-card> -->
+						></oeb-issuer-card>
 					}
 				</div>
 
@@ -96,31 +94,31 @@
 		</section>
 	</ng-template>
 
-	<!-- Infinite scroll footer (same UX as badge catalog) -->
-	<div #loadMore class="oeb-section-sm">
-		<ng-template [showLoader]="false" [bgAwaitPromises]="pageReadyPromise">
-			@if (hasNext()) {
-				@if (!observeScrolling()) {
-					<loading-dots />
+	@if (badgesDisplay !== 'map') {
+		<div #loadMore class="oeb-section-sm">
+			<ng-template [showLoader]="false" [bgAwaitPromises]="pageReadyPromise">
+				@if (hasNext()) {
+					@if (!observeScrolling()) {
+						<loading-dots />
+					} @else {
+						<oeb-button
+							variant="secondary"
+							size="sm"
+							type="button"
+							text="{{ 'General.loadMore' | translate }}"
+							(click)="onLoadMoreClicked()"
+							class="tw-mx-auto tw-block tw-w-max"
+						/>
+					}
 				} @else {
-					<oeb-button
-						variant="secondary"
-						size="sm"
-						type="button"
-						text="{{ 'General.loadMore' | translate }}"
-						(click)="loadNextPage()"
-						class="tw-mx-auto tw-block tw-w-max"
-					/>
+					<h4 hlmH4 class="tw-text-oebblack tw-text-center">
+						{{ 'Issuer.catalogAllLoaded' | translate }}
+					</h4>
 				}
-			} @else {
-				<h4 hlmH4 class="tw-text-oebblack tw-text-center">
-					{{ 'Issuer.catalogAllLoaded' | translate }}
-				</h4>
-			}
-		</ng-template>
-	</div>
+			</ng-template>
+		</div>
+	}
 
-	<!-- Map -->
 	<div id="mapWrapper" class="tw-h-[45vh]" [hidden]="badgesDisplay !== 'map'">
 		<div id="map" #map></div>
 		<div id="map-legend">
