fix: adjust inputs after select refactor

--- a/src/app/catalog/components/badge-catalog/badge-catalog.component.html
+++ b/src/app/catalog/components/badge-catalog/badge-catalog.component.html
@@ -53,6 +53,7 @@
 						<oeb-global-sort-select
 							placeholder="{{ 'Badge.sortBy' | translate }}"
 							class="oeb tw-w-[12rem]"
+							[options]="sortOptions"
 							[control]="sortControl"
 						>
 						</oeb-global-sort-select>
