--- a/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
+++ b/src/app/catalog/components/learningpath-catalog/learningpath-catalog.component.html
@@ -55,6 +55,7 @@
 						<oeb-global-sort-select
 							placeholder="{{ 'Badge.sortBy' | translate }}"
 							class="oeb tw-w-[12rem]"
+							[options]="sortOptions"
 							[control]="sortControl"
 						>
 						</oeb-global-sort-select>
