--- a/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
+++ b/src/app/issuer/components/badgeclass-issue-bulk-award-confirmation/badgeclass-issue-bulk-award-confirmation.component.html
@@ -96,6 +96,9 @@
 		[showEvidence]="false"
 		[showLocation]="true"
 		[showCourseDate]="true"
+		[showEvidence]="true"
+		(addEvidenceEvent)="addEvidence()"
+		(removeEvidenceEvent)="removeEvidence($event)"
 		[showCourseUrl]="true"
 		[courseUrlDefaultOpen]="badgeInstanceCourseUrl() !== null && badgeInstanceCourseUrl().length > 0"
 	/>
